Compiler Bouw/compiler/test/basic/stephen/fail/modulus.cvc
// Modulus only works on integers.

#include "civic.h"

export int main() {
    6.0 % 5.0;
    return 0;
}
